# erweitern_55

./: .gitignore  LICENSE  README.md  main.py  network.py  requirements.txt  reservoir.py  train.py  utils.py
.github/: test.yml
.github/workflows/: test.yml
erweitern_55/: client.py  gamerecord.py  main.py  mcts.py  network.py  reservoir.py  selfplay.py  train.py  usi.py
erweitern_55/test/: test_mcts.py
minishogi_lib/: Cargo.toml
minishogi_lib/src/: lib.rs
minishogilib/: Cargo.toml  rustfmt.toml
minishogilib/src/: bitboard.rs  checkmate.rs  lib.rs  mcts.rs  move.rs  neuralnetwork.rs  position.rs  types.rs  zobrist.rs
nn/: network.py  train.py
python/: client.py  gamerecord.py  greedy.py  main.py  mcts.py  network.py  requirements.txt  reservoir.py  search.py  selfplay.py  train.py  usi.py  utils.py
python/nn/: network.py
python/tools/: plot_loss.py
src/: main.py
tests/: test_checkmate.py  test_network.py  test_repetition.py
tools/: analyzer.py  average_ply.py  distiller.py  plot_loss.py  plot_model.py
tools/browser/: index.html  server.py
