[package]
name = "minishogilib"
version = "0.2.2"
authors = ["nyashiki"]

[lib]
name = "minishogilib"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]

[dependencies]
rand = "0.6"
lazy_static = "0.2.1"
bitintr = "0.3.0"
ndarray = "0.12.1"
numpy = "0.6.0"
